GNOME Bugzilla – Bug 747973
"Reload Anyway" when a page fails loading
Last modified: 2016-02-28 17:41:31 UTC
Created attachment 301703 [details] screenshot Same string is probably used for multiple errors, but "page failed loading [reload anyway]" feels werid to me.
What would you prefer we name it? In theory, users should never see that error page, because it means the web process crashed. But in practice, it crashes sometimes, and you want to be able to try loading the page again when it does, since it will often succeed on a second attempt.
Simple 'reload' works for me.
The following fix has been pushed: c0d9dd3 Improve reload buttons on error pages
Created attachment 322596 [details] [review] Improve reload buttons on error pages * Fix translation of the access keys * Get rid of "Anyway" as Jakub doesn't like it * Use "opinionated design" for the TLS error page bypass