Improve reload buttons on error pages

* Fix translation of the access keys
* Get rid of "Anyway" as Jakub doesn't like it
* Use "opinionated design" for the TLS error page bypass

https://bugzilla.gnome.org/show_bug.cgi?id=747973